--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -26,6 +26,10 @@ home=/Users/you/envs/env
 chdir = %dapp/
 # load the module from wsgi.py, it is a python path from 
 # the directory above.
-module=website.wsgi:application
+module=GenGoZ.wsgi:application
 # allow anyone to connect to the socket. This is very permissive
 chmod-socket=666
+
+env = DJANGO_SETTINGS_MODULE=GenGoZ.settings.production
+env = DJANGO_SECRET_KEY="7i-9-cqag)9t%gymf-w0!hjyr&-l7qg3c=(dng+tyuc(lu#7wk"
+env = SWISS_FACEBOOK_CLIENT_SECRET=15e46b90414d4bd96f2860f6f8b82173
